<resources>
    <string name="app_name" translatable="false">&appname;</string>
    <string name="google_maps_key" translatable="false">&googleMapKey;</string>
    <string name="txt_country_code">&countryCode;</string>
    <string name="url_privacy" translatable="false">&baseUrl;#/privacy-policy</string>
    <string name="url_terms" translatable="false">&baseUrl;#/terms</string>
    <string name="txt_term_and_policy"><![CDATA[<p>By continuing, you agree to our <a href=\"https://shuttle.ridein.in/#/terms\">terms of service</a> and <a href=\"https://shuttle.ridein.in/#/privacy-policy\">privacy policy</a><p>]]></string>
    <string name="facebook_app_id" translatable="false">959809234778581</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb959809234778581</string>
    <string name="razorpay_test_key" translatable="false">rzp_test_2jsXvTqWBQyNXb</string>
    <string name="txt_bus_available"> Bus Available</string>
    <string name="text_seat">Seat</string>
    <string name="send_to">Share using</string>
    <string name="txtYourCode">Your code:</string>
    <string name="txtTotalEarning">Total Earning</string>
    <string name="txt_your_link">Your Link :</string>
    <string name="text_get_100_when_your_friend_complete_trip_with_us">Now refer your friends, colleagues and earn exciting credits in your wallet.<br /><br /> How it works?<br /><br />
1. Invite a friend to use our app, using your referral code. Your friend gets Rs 100 credits in wallet on signing up. <br />
2. You get Rs 100 in credits when a friend confirms (completed ride post boarding) their 1" paid ride. <br />
3. You can use the credits to book your next ride(s).
</string>
    <string name="hint_enter_your_contact_number">Enter Contact Number</string>
    <string name="lbl_email">Email :</string>
    <string name="lbl_wallet">Refer friends, Earn wallet money</string>
    <string name="lbl_your_wallet_in_balance">Your Balance</string>
    <string name="title_price">Price</string>
    <string name="text_confirmed">Confirmed</string>
    <string name="hint_from_city">From City</string>
    <string name="hint_to_city">To City</string>
    <string name="txt_view_all">View all</string>
    <string name="txt_new_offers">New Offers</string>
    <string name="txt_popular_package">Popular Packages</string>
    <string name="title_email_notification_settings">Email Notification Settings</string>
    <string name="txt_email_notification">Email Notification</string>
    <string name="lbl_contact_number_settings">Contact Number Notification Settings</string>
    <string name="lbl_mobile_no">Mobile No :</string>
    <string name="lbl_number_notification">Number Notification</string>
    <string name="title_language_setting">Language Settings</string>
    <string name="lbl_language">Language :</string>
    <string name="txt_english_us">English-US</string>
    <string name="lbl_first_name">First Name :</string>
    <string name="lbl_last_name">Last Name :</string>
    <string name="lbl_gender">Gender :</string>
    <string name="title_edit_your_name">Edit Your Personal Details</string>
    <string name="title_edit_your_contact">Edit Your Contact</string>
    <string name="lbl_total_fare">Total Fare</string>
    <string name="lbl_pnr_no">PNR No</string>
    <string name="tite_toolbar_cards">Cards</string>
    <string name="lbl_help_support">Help and Support</string>
    <string name="hint_enter_your_emailid">Enter Your Email Id</string>
    <string name="txt_ticket_no">Ticket No</string>
    <string name="msg_email_required">Email required</string>
    <string name="msg_email_valid">Enter Valid Email</string>
    <string name="msg_first_name">First name required</string>
    <string name="msg_last_name">Last name required</string>
    <string name="msg_valid_mobile_number">Enter Valid Mobile number</string>
    <string name="msg_mobile_number">Mobile number required</string>
    <string name="msg_email_id">Email Id required</string>
    <string name="msg_description">Description required</string>
    <string name="msg_office_add">Office address required</string>
    <string name="msg_home_add">Home address required</string>
    <string name="msg_time">Leave time required</string>
    <string name="hint_email">Enter Email ID</string>
    <string name="txtCancelled">Cancelled</string>
    <string name="txtColon">:</string>
    <string name="search">Search</string>
    <string name="lbl_special">SPECIAL</string>
    <string name="lbl_use_code">Use Code:</string>
    <string name="lbl_notification">Notification</string>
    <string name="lbl_bus_routes">Bus Route</string>
    <string name="lbl_verification">Enter your verification code \n we have just sent you on your mobile number</string>
    <string name="txt_verify">Verify</string>
    <string name="txt_Resend">Re-send</string>
    <string name="lbl_StarRatings">Star Ratings</string>
    <string name="txt_BusType">Bus Type</string>
    <string name="lbl_Apply">Apply</string>
    <string name="text_you_want_to">Welcome to</string>
    <string name="hint_mobile">Enter Mobile Number</string>
    <string name="lbl_continue">Continue</string>
    <string name="text_signinwith">Sign In With</string>
    <string name="verification">Verification</string>
    <string name="refere_and_earn">Refer &amp; Earn</string>
    <string name="lbl_profile_settings">Edit Profile</string>
    <string name="lbl__wallet">Wallet</string>
    <string name="lbl_cards">Cards</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_submit">Submit</string>
    <string name="home">Home</string>
    <string name="text_book_now">Book Now</string>
    <string name="text_contact_information">Contact Information</string>
    <string name="text_bus_information">Bus Information</string>
    <string name="text_bus_routes_info">Route Stops</string>
    <string name="text_select_stop">Select your stop</string>
    <string name="text_remind_me">Remind me before</string>
    <string name="text_remind_me_on">Remind me on</string>
    <string name="text_phone">Phone :</string>
    <string name="txt_passenger">Passenger: </string>
    <string name="txt_passenger_no">Passenger </string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="hint_enter_age">Enter Age</string>
    <string name="hint_card_number">Card Number</string>
    <string name="text_select_month">Month</string>
    <string name="text_select_year">Year</string>
    <string name="text_card_holder_name">Card Holder Name</string>
    <string name="text_valid">Valid</string>
    <string name="lbl_ac">AC</string>
    <string name="lbl_non_ac">NON-AC</string>
    <string name="lbl_sleeper">SLEEPER</string>
    <string name="lbl_seater">SEATER</string>
    <string name="lbl_payment">Payment</string>
    <string name="lbl_reminder">Set Reminder</string>
    <string name="txt_cancelled">Cancelled</string>
    <string name="txt_cancel_booking">Cancel</string>
    <string name="text_available">Available</string>
    <string name="text_booked">Booked</string>
    <string name="text_pickup_point">Pickup point</string>
    <string name="text_dropping_points">Dropping point</string>
    <string name="text_selected">Selected</string>
    <string name="lbl_view_routes"><u>View Route</u></string>
    <string name="smith_travels">Smith travels</string>
    <string name="text_net_banking">Net Banking</string>
    <string name="text_offers">Offers</string>
    <string name="text_credit_card">Credit Card</string>
    <string name="text_debit">Debit Cart</string>
    <string name="text_Mobilewallet">Mobile Wallet</string>
    <string name="text_bus_list">Select a time slot</string>
    <string name="hint_enter_first_name">Enter First Name</string>
    <string name="hint_enter_last_name">Enter Last Name</string>
    <string name="text_save">Save</string>
    <string name="text_ticket_book">Paynow</string>
    <string name="text_set_reminder">Set Reminder</string>
    <string name="text_total_amount">Total Amount</string>
    <string name="txt_copy">Copied</string>
    <string name="text_offercode">Offer Code</string>
    <string name="text_package">Package</string>
    <string name="msg_from">From city required</string>
    <string name="msg_office_ride_address_required">Home and Office Address are required</string>
    <string name="msg_office_ride_timing_required">Home and Office Timing are required</string>
    <string name="msg_to">To city required</string>
    <string name="msg_name">Name required</string>
    <string name="ms_age">Age required</string>
    <string name="msg_digit">Card Number required</string>
    <string name="msg_code">Code required</string>
    <string name="msg_holdername">Holder Name required</string>
    <string name="text_hour">Hour</string>
    <string name="text_remove">Item was removed from the list.</string>
    <string name="title_add_new_card">Add new card</string>
    <string name="title_wallet">Wallet</string>
    <string name="text_trending_packages">Trending Packages</string>
    <string name="text_description">Description</string>
    <string name="text_upper">Upper</string>
    <string name="text_lower">Lower</string>
    <string name="text_ladies">Ladies</string>
    <string name="text_logout">Logout</string>
    <string name="msg_saved">Saved</string>
    <string name="text_confirmation">Confirmation!</string>
    <string name="msg_logout">Are you sure, you want to logout?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_totalseat">Total Seat:</string>
    <string name="text_cvv">CVV</string>
    <string name="text_seat_no">Seat No</string>
    <string name="text_addcard">Add Card</string>
    <string name="text_settings">Settings</string>
    <string name="text_select_bus">Select Seat</string>
    <string name="text_hold">Stops</string>
    <string name="text_ticket_price">Ticket Price :</string>
    <string name="text_tax">Tax :</string>
    <string name="text_tax_inc">Included in fare</string>
    <string name="text_total_price">Total:</string>
    <string name="text_duration">ETA</string>
    <string name="text_payment">Payment</string>
    <string name="text_done">Done</string>
    <string name="text_payment_success">Payment Success !</string>
    <string name="text_close">Close</string>
    <string name="text_cardadd">Card Added</string>
    <string name="msg_success">Thank you for booking. Enjoy your trip</string>
    <string name="text_recent_search">Recent Search</string>
    <string name="text_am">AM</string>
    <string name="text_pm">PM</string>
    <string name="text_city">Stops</string>
    <string name="lbl_pickup1">Pickup 1</string>
    <string name="lbl_location1">Landmark</string>
    <string name="lbl_pickup2">Pickup 2</string>
    <string name="lbl_dropping1">Dropping 1</string>
    <string name="lbl_droppin2">Dropping 2</string>
    <string name="lbl_type1">Seater</string>
    <string name="lbl_type2">sleeper</string>
    <string name="text_version">Version :</string>
    <string name="text_country">Country: </string>
    <string name="lbl_allow">Allow</string>
    <string name="helps_us_by_giving_location_permission_to_show_you_buses_live_status">Helps us by giving location permission to show you buses live status.</string>
    <string name="shuttle_collects_location_data_to_show_passenger_bus_routes_only_when_the_app_in_use">&appname; collects location data to show passenger bus routes only when the app in use.</string>
    <string name="location_show_your_routes">Location (show your routes)</string>
    <string name="notification_for_receiving_booking_related_notifications">Notification (for receiving booking related notifications)</string>
    <string name="camera_amp_storage_for_profile_image">Camera &amp; Storage (for profile image)</string>
    <string name="mode">Mode :</string>
    <string name="txt_date" translatable="false">28-May-2019</string>
</resources>