<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:cardCornerRadius="@dimen/spacing_small"
        app:cardElevation="@dimen/card_shadow">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llWhImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/spacing_medium"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivWhImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_square_box"
                    android:backgroundTint="@color/gray"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_payment_received_24" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_toEndOf="@+id/llWhImg"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:singleLine="true"
                    android:fontFamily="@font/googlesansregular"
                    android:text="@string/lbl_payment"
                    android:textColor="@color/textheader"
                    android:textSize="@dimen/font_large" />


                <TextView
                    android:id="@+id/tvDestination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTitle"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginEnd="@dimen/spacing_small"
                    android:fontFamily="@font/googlesansregular"
                    android:gravity="center_vertical"
                    android:text="@string/mode"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/font_medium" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/googlesansregular"
                    android:paddingTop="@dimen/spacing_small"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:textColor="@color/textchild"
                    android:textSize="@dimen/font_msmall"
                    android:layout_below="@+id/tvDestination"
                    android:layout_alignParentEnd="true"
                    tools:text="@string/txt_date"  />


            </RelativeLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>